--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
   </section>
 
   <section id="video-thumbnails">
-    <a class="thumbnail-link" href="https://">
+    <a class="thumbnail-link" href="https://youtu.be/1aQtuxY7PSs?si=6dFIGKUNbJojScpt">
     <div class="thumbnail thumbnail1"></div>
   </a>
-  <a class="thumbnail-link" href="https">
+  <a class="thumbnail-link" href="https://youtu.be/rCrSaGIZt9o?si=ybW12TU9O-8WwlEc">
    <div class="thumbnail thumbnail2" ></div>
-  <a class="thumbnail-link" href="https://">
+  <a class="thumbnail-link" href="https://youtu.be/Z3g4x6wNYf8?si=qFVKvlW5scCJrNrj">
     <div class="thumbnail thumbnail3"></div>
   </a>
-  <a class="thumbnail-link" href="https">
+  <a class="thumbnail-link" href="https://spotify.link/3b5AEmEJ3Cb">
    <div class="thumbnail thumbnail4" ></div>
     </div>
   </section>
