--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="store_name image">
       <a href="www.AngelMudah.html" title="AngelMudah">
         
-          <img src="images/Mudah.png" alt="ANGEL MUDAH">
+          <img src="Logo.gif" alt="ANGEL MUDAH">
         
       </a>
     </div>
