--- a/Shop.html
+++ b/Shop.html
@@ -76,7 +76,7 @@
         </li>
         <li class="product soon">
           <a href="product/twin-flame-rebirth-tee.html">
-            <img alt="Image of Twin Flame Rebirth Tee" src="product_images/350979103/2twinflamepng.png">
+            <img alt="Image of Twin Flame Rebirth Tee" src="Cap.JPG">
             <div class="product_details">
     					<div class="details_background"></div>
     							<div class="product_status"></div>
