--- a/Shop.html
+++ b/Shop.html
@@ -87,7 +87,7 @@
         </li>
         <li class="product sold">
           <a href="product/rr-01-tee-ink.html">
-            <img alt="Image of RR-01 Tee &quot;INK&quot;" src="product_images/341868085/evawhite.png">
+            <img alt="Image of RR-01 Tee &quot;INK&quot;" src="Top.JPG">
             <div class="product_details">
     					<div class="details_background"></div>
     							<div class="product_status"></div>
