--- a/Shop.html
+++ b/Shop.html
@@ -87,7 +87,7 @@
         </li>
         <li class="product sold">
           <a href="product/rr-01-tee-ink.html">
-            <img alt="Image of RR-01 Tee &quot;INK&quot;" src="IMG_21.PNG">
+            <img alt="Image of RR-01 Tee &quot;INK&quot;" src="FC2B0C31-6DB4-44B8-8FE6-EF8554145A84.png">
             <div class="product_details">
     					<div class="details_background"></div>
     							<div class="product_status"></div>
