https://github.com/yeziR4/mudah.com.git

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
     <div class="store_name image">
       <a href="www.silver-bridges.html" title="Reborn">
         
-          <img src="images/Mudah.png" alt="AngelMudah">
+          <img src="Logo.GIF" alt="AngelMudah">
         
       </a>
     </div>
