--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
               RADIO
             </div>
           </a>
-          <a href="" class="link-block w-inline-block enter-nav-link" style=" height: 20px">
+          <a href="ZHOP.html" class="link-block w-inline-block enter-nav-link" style=" height: 20px">
             <div class="nav-link center"
               style="font-size:15px; --navlink-hover-color: #ffffff; --navlink-background-color: #00008b; --nav-link-color: #000000">
               LOOKBOOK
