--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
     <div class="main-menu-inner">
       <div id="shopify-section-nav-link" class="shopify-section">
         <div class="pages-menu home-menu-grid-mobile">
-          <a href="C:\Users\pc\mudah.com\collections\collections\shop.html" class="link-block w-inline-block enter-nav-link" style=" height: 20px">
+          <a href="collections/shop.html" class="link-block w-inline-block enter-nav-link" style=" height: 20px">
             <div class="nav-link center"
               style="font-size:15px; --navlink-hover-color: #ffffff; --navlink-background-color: #00008b; --nav-link-color: #000000">
               SHOP
