--- a/collections/shop.html
+++ b/collections/shop.html
@@ -642,21 +642,21 @@ for (var attr in meta) {
       >
   <div style="width: 100%" role="listitem" class="collection-item w-dyn-item">
     <a href="../collections/products/teez.html" class="link-block-2 w-inline-block">
-      <img style="--product-border-color: #000000; --product-border-thickness: 0px;" src="../cdn/shop/files/img59.png" alt="(K)EEP OUR (C)ITY SAFE" class="product-image" data-commerce-type="variation-image" srcset="../cdn/shop/files/img59.png 1920w,../cdn/shop/files/img59.png 1600w,../cdn/shop/files/img59.png 1366w,../cdn/shop/files/img59.png 1024w,../cdn/shop/files/img59.png 768w,../cdn/shop/files/img59.png 640w">
+      <img style="--product-border-color: #000000; --product-border-thickness: 0px;" src="collections/cdn/shop/files/img59.png" alt="(K)EEP OUR (C)ITY SAFE" class="product-image" data-commerce-type="variation-image" srcset="../cdn/shop/files/img59.png 1920w,../cdn/shop/files/img59.png 1600w,../cdn/shop/files/img59.png 1366w,../cdn/shop/files/img59.png 1024w,../cdn/shop/files/img59.png 768w,../cdn/shop/files/img59.png 640w">
     </a><div style="color: #000000; font-size:12px" class="prouduct-title">Mudah Tees</div><div style="color: #000000; font-size:12px" class="prouduct-title">
       $25.00
     </div>
 </div>
   <div style="width: 100%" role="listitem" class="collection-item w-dyn-item">
     <a href="../collections/shop/products/mens-classic-tee-2.html" class="link-block-2 w-inline-block">
-      <img style="--product-border-color: #000000; --product-border-thickness: 0px;" src="../cdn/shop/files/img59.png" alt="(K)EEP OUR (C)ITY SAFE" class="product-image" data-commerce-type="variation-image" srcset="../cdn/shop/files/kcred_1920x.jpg 1920w,../cdn/shop/files/kcred_1600x.jpg 1600w,../cdn/shop/files/img59.png 1366w,../cdn/shop/files/img59.png 1024w,../cdn/shop/files/img59.png 768w,../cdn/shop/files/img59.png 640w">
+      <img style="--product-border-color: #000000; --product-border-thickness: 0px;" src="collections/cdn/shop/files/img59.png" alt="(K)EEP OUR (C)ITY SAFE" class="product-image" data-commerce-type="variation-image" srcset="../cdn/shop/files/kcred_1920x.jpg 1920w,../cdn/shop/files/kcred_1600x.jpg 1600w,../cdn/shop/files/img59.png 1366w,../cdn/shop/files/img59.png 1024w,../cdn/shop/files/img59.png 768w,../cdn/shop/files/img59.png 640w">
     </a><div style="color: #000000; font-size:12px" class="prouduct-title">Mudah Tees</div><div style="color: #000000; font-size:12px" class="prouduct-title">
       $25.00
     </div>
 </div>
   <div style="width: 100%" role="listitem" class="collection-item w-dyn-item">
     <a href="../collections/shop/products/mens-classic-tee-1.html" class="link-block-2 w-inline-block">
-      <img style="--product-border-color: #000000; --product-border-thickness: 0px;" src="../cdn/shop/files/img59.png" alt="(K)EEP OUR (C)ITY SAFE" class="product-image" data-commerce-type="variation-image" srcset="../cdn/shop/files/kcwhite_1920x.jpg 1920w,../cdn/shop/files/img59.png 1600w,../cdn/shop/files/img59.png 1366w,../cdn/shop/files/img59.png 1024w,../cdn/shop/files/img59.png 768w,../cdn/shop/files/img59.png 640w">
+      <img style="--product-border-color: #000000; --product-border-thickness: 0px;" src="collections/cdn/shop/files/img59.png" alt="(K)EEP OUR (C)ITY SAFE" class="product-image" data-commerce-type="variation-image" srcset="../cdn/shop/files/kcwhite_1920x.jpg 1920w,../cdn/shop/files/img59.png 1600w,../cdn/shop/files/img59.png 1366w,../cdn/shop/files/img59.png 1024w,../cdn/shop/files/img59.png 768w,../cdn/shop/files/img59.png 640w">
     </a><div style="color: #000000; font-size:12px" class="prouduct-title">Mudah Tees</div><div style="color: #000000; font-size:12px" class="prouduct-title">
       $25.00
     </div>
