--- a/collections/shop.html
+++ b/collections/shop.html
@@ -464,7 +464,7 @@ for (var attr in meta) {
 <!--       <a data-w-id="b46ce580-dd6b-e4df-f0e5-7b65957d9288" href="#" class="filter-btn w-button" style="color:; background-color:#000000">+ Menu</a>
  --></div><a href="" class="logo-link w-inline-block">
         <img
-          src="../cdn/shop/files/IMG_5468.PNG"
+          src="collections/cdn/shop/files/IMG_5468.PNG"
           style="width: 115px"
           loading="lazy"
           alt=""
